part-4/products-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products-api
spec:
  rules:
  - host: api.widgetario.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: products-api
            port:
              number: 80
